# Threat-Detection-Model-DeepLearning

./: .gitignore  BETH_StepByStep_Guide.md  MODEL_DEVELOPMENT_PLAN.md  PyTorch_Project_Structure.md  README.md  data_analysis_report.html  data_analysis_report.md  evaluation_report.html  evaluation_report.md  package.json  pyproject.toml
configs/cyber_attack_detection/: default.yaml
src/: main.py
src/core/: config.py  logger.py
src/core/common/wfs/: dtos.py  interfaces.py
src/pipelines/cyber_attack_detection/: main.py
src/pipelines/cyber_attack_detection/download/: facade.py
src/pipelines/cyber_attack_detection/download/tasks/: kaggle_beth.py
src/pipelines/cyber_attack_detection/inference/: facade.py
src/pipelines/cyber_attack_detection/inference/tasks/: predict.py
src/pipelines/cyber_attack_detection/models/: facade.py
src/pipelines/cyber_attack_detection/models/tasks/: autoencoder.py
src/pipelines/cyber_attack_detection/preprocessing/: facade.py
src/pipelines/cyber_attack_detection/preprocessing/tasks/: cleaning.py  data_analysis.py  encoding.py  feature_engineering.py  scaling.py
src/pipelines/cyber_attack_detection/training/: facade.py
src/pipelines/cyber_attack_detection/training/tasks/: trainer.py
